New files added - [] Files modified - [MunicipalitySettings.html,Cx2QueryExecutorServiceImpl.java,MunicipalitySettings.variables.json,cx2-queries.hbm.xml,QueryExecutionController.java,servicedef.xml,cx2_query.json,Cx2QueryExecutorService.java] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -25,7 +25,113 @@
                             <wm-layoutgrid name="layoutgrid8">
                                 <wm-gridrow name="gridrow12" padding="2em">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn28">
-                                        <wm-panel iconclass="wi wi-info-outline" name="panel2" title="Municipality Feilds"></wm-panel>
+                                        <wm-panel iconclass="wi wi-info-outline" name="panel2" title="Municipality Feilds">
+                                            <wm-layoutgrid name="layoutgrid3">
+                                                <wm-gridrow name="gridrow6_1">
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn8"></wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="8" name="gridcolumn9" padding="1em unset">
+                                                        <wm-composite name="composite2">
+                                                            <wm-label class="col-md-3 control-label" name="label3" caption="MunicipalityName"></wm-label>
+                                                            <wm-container class="col-md-9" name="container2">
+                                                                <wm-text name="textMunicipalityName"></wm-text>
+                                                            </wm-container>
+                                                        </wm-composite>
+                                                    </wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn12"></wm-gridcolumn>
+                                                </wm-gridrow>
+                                                <wm-gridrow name="gridrow8">
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn13"></wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="8" name="gridcolumn14_1" padding="1em unset">
+                                                        <wm-composite name="composite3">
+                                                            <wm-label class="col-md-3 control-label" name="label4" caption="Address1"></wm-label>
+                                                            <wm-container class="col-md-9" name="container3">
+                                                                <wm-text name="textAddress1"></wm-text>
+                                                            </wm-container>
+                                                        </wm-composite>
+                                                    </wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn15"></wm-gridcolumn>
+                                                </wm-gridrow>
+                                                <wm-gridrow name="gridrow9">
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn16"></wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="8" name="gridcolumn17" padding="1em unset">
+                                                        <wm-composite name="composite4">
+                                                            <wm-label class="col-md-3 control-label" name="label5_1" caption="Address2"></wm-label>
+                                                            <wm-container class="col-md-9" name="container4">
+                                                                <wm-text name="textAddress2"></wm-text>
+                                                            </wm-container>
+                                                        </wm-composite>
+                                                    </wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn18"></wm-gridcolumn>
+                                                </wm-gridrow>
+                                                <wm-gridrow name="gridrow10">
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn19"></wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="8" name="gridcolumn20" padding="1em unset">
+                                                        <wm-composite name="composite5">
+                                                            <wm-label class="col-md-3 control-label" name="label6_1" caption="City"></wm-label>
+                                                            <wm-container class="col-md-9" name="container5">
+                                                                <wm-text name="textCity"></wm-text>
+                                                            </wm-container>
+                                                        </wm-composite>
+                                                    </wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn21"></wm-gridcolumn>
+                                                </wm-gridrow>
+                                                <wm-gridrow name="gridrow11">
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn22"></wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="8" name="gridcolumn23" padding="1em unset">
+                                                        <wm-composite name="composite6">
+                                                            <wm-label class="col-md-3 control-label" name="label7" caption="State"></wm-label>
+                                                            <wm-container class="col-md-9" name="container6">
+                                                                <wm-search name="textState"></wm-search>
+                                                            </wm-container>
+                                                        </wm-composite>
+                                                    </wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn24"></wm-gridcolumn>
+                                                </wm-gridrow>
+                                                <wm-gridrow name="gridrow12_1">
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn25"></wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="8" name="gridcolumn26" padding="1em unset">
+                                                        <wm-composite name="composite7">
+                                                            <wm-label class="col-md-3 control-label" name="label8" caption="PostalCode"></wm-label>
+                                                            <wm-container class="col-md-9" name="container7">
+                                                                <wm-text name="textPostalCode"></wm-text>
+                                                            </wm-container>
+                                                        </wm-composite>
+                                                    </wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn27"></wm-gridcolumn>
+                                                </wm-gridrow>
+                                                <wm-gridrow name="gridrow13_1">
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn28_1"></wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="8" name="gridcolumn29">
+                                                        <wm-composite name="composite8">
+                                                            <wm-label class="col-md-3 control-label" name="label9" caption="Phone"></wm-label>
+                                                            <wm-container class="col-md-9" name="container8">
+                                                                <wm-text name="textPhone"></wm-text>
+                                                            </wm-container>
+                                                        </wm-composite>
+                                                    </wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn30_1"></wm-gridcolumn>
+                                                </wm-gridrow>
+                                                <wm-gridrow name="gridrow14_1">
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn31"></wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="8" name="gridcolumn32_1">
+                                                        <wm-composite name="composite9">
+                                                            <wm-label class="col-md-3 control-label" name="label10" caption="Email"></wm-label>
+                                                            <wm-container class="col-md-9" name="container9">
+                                                                <wm-text name="textEmail"></wm-text>
+                                                            </wm-container>
+                                                        </wm-composite>
+                                                    </wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="2" name="gridcolumn33"></wm-gridcolumn>
+                                                </wm-gridrow>
+                                                <wm-gridrow name="gridrow15">
+                                                    <wm-gridcolumn columnwidth="6" name="gridcolumn34"></wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="6" name="gridcolumn35"></wm-gridcolumn>
+                                                    <wm-gridcolumn columnwidth="4" name="gridcolumn36">
+                                                        <wm-button class="btn-default" caption="Save" type="button" margin="unset 0.5em" name="button1" iconclass="wi wi-save"></wm-button>
+                                                    </wm-gridcolumn>
+                                                </wm-gridrow>
+                                            </wm-layoutgrid>
+                                        </wm-panel>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow13" padding="2em">
